--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,23 @@
 # Basic Information 
-title: Your Name
-position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+title: Kyla Caryl Españo
+position: Information Technology Student
+affiliation: Camarines Sur Polytechnic Colleges
+affiliation_link: https://cspc.edu.ph/
+email: kyespano (at) my.cspc.edu.ph
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: minimal light
+keywords: Kyla Caryl Españo, KylaCarylEspaño, Españo Kyla Caryl, EspañoKylaCaryl, Ky Españo, KyEspaño, Españo Ky, EspañoKy, Espano, Kaisunoo, kaisunoo
 description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
 canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/
-cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
-linkedin: https://www.linkedin.com/
-twitter: https://twitter.com/
+# google_scholar: https://scholar.google.com/
+# cv_link: assets/files/curriculum_vitae.pdf
+github_link: https://github.com/kaisunoo
+linkedin: www.linkedin.com/in/kyespano
+twitter: https://twitter.com/kaisuno_o
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
