--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ email: kyespano (at) my.cspc.edu.ph
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: Kyla Caryl Españo, KylaCarylEspaño, Españo Kyla Caryl, EspañoKylaCaryl, Ky Españo, KyEspaño, Españo Ky, EspañoKy, Espano, Kaisunoo, kaisunoo
-description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
-canonical: https://minimal-light-theme.yliu.me/
+description: Kyla Caryl Españo is an Information Technology Student at Camarines Sur Polytechnic Colleges.
+canonical: https://kaisunoo.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
