--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ canonical: https://kaisunoo.github.io/
 github_link: https://github.com/kaisunoo
 linkedin: www.linkedin.com/in/kyespano
 twitter: https://twitter.com/kaisuno_o
+linkfree: linkfree.io/kaisunoo
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
